Prevent infinite loop when Scheme name has / in it

A fix to prevent an infinite loop if user puts / in ColorScheme name;
Konsole will create a sub-folder in that case.

More code will have to go in to prevent the users from doing that.

FIXED-IN: 4.11
BUG: 315086